--- a/src/markdown/mas/routeafstanden_2023.Rmd
+++ b/src/markdown/mas/routeafstanden_2023.Rmd
@@ -313,14 +313,23 @@ closest_dist <- clustered_points %>%
 
 De som van alle kortste afstanden binnen elke groep telpunten is `r sum(closest_dist$afstand)` km.
 
+```{r}
+closest_dist %>%
+  st_drop_geometry() %>%
+  group_by(regio) %>%
+  summarise(som_intra_afstanden = sum(afstand)) %>%
+  mutate(eenheid = "km") %>%
+  kable()
+```
+
 
 # Routeberekening naar clusters
 
--centroide van elke groep
--kortste afstand naar tellers
--aantal keer op en neer naar groep punten
--- 0.5 voor clusters 2-5
--- 1 voor clusters 6-10
--- 1.5 voor clusters 11-15
--- 2 voor clusters 16-20
---alles x2 voor heen en terug
+- centroide van elke groep
+- kortste afstand naar tellers
+- aantal keer op en neer naar groep punten
+  - 0.5 voor clusters 2-5
+  - 1 voor clusters 6-10
+  - 1.5 voor clusters 11-15
+  - 2 voor clusters 16-20
+- alles x2 voor heen en terug
