--- a/src/markdown/mas/routeafstanden_2023.Rmd
+++ b/src/markdown/mas/routeafstanden_2023.Rmd
@@ -327,9 +327,21 @@ closest_dist %>%
 
 - centroide van elke groep
 - kortste afstand naar tellers
+- alles x2 voor heen en terug
+
+## Minimum scenario
+
 - aantal keer op en neer naar groep punten
   - 0.5 voor clusters 2-5
   - 1 voor clusters 6-10
   - 1.5 voor clusters 11-15
   - 2 voor clusters 16-20
-- alles x2 voor heen en terug
+
+## Maximum scenario
+
+- aantal keer op en neer naar groep punten
+  - 1 voor clusters 2-5
+  - 1 voor clusters 6-10
+  - 2 voor clusters 11-15
+  - 2 voor clusters 16-20
+  
