avoid scientific notation for big numbers

--- a/src/markdown/mas/routeafstanden_2023.Rmd
+++ b/src/markdown/mas/routeafstanden_2023.Rmd
@@ -22,7 +22,8 @@ opts_chunk$set(
   echo = TRUE,
   warning = FALSE,
   message = FALSE,
-  out.width = "100%")
+  out.width = "100%",
+  options(scipen = 999))
 opts_knit$set(root.dir = here::here())
 
 # packages
